--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,13 @@
                 "./src/*"
             ]
         },
-        "skipLibCheck": true
-    }
+        "skipLibCheck": true,
+        "noEmit": false,
+        "emitDeclarationOnly": true,
+        "declaration": true,
+        "outDir": "./dist/"
+    },
+    "include": [
+        "src"
+    ]
 }
